[package]
edition = "2021"
name = "reloader-embassy"
version = "0.1.0"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
embassy-futures = { version = "0.1.0" }
futures = { version = "0.3", default-features = false, features = ["async-await"]}
embassy-embedded-hal = { version = "0.2", default-features = false, features = ["defmt"] }
embassy-sync = { version = "0.6" }
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embassy-boot-nrf = { version = "0.3", features = [] }
embassy-boot = { version = "0.3", features = [] }
embedded-io = "0.6.0"
embedded-storage = "0.3.0"
embedded-hal = "1"
pinetime-flash = { version = "0.1.0", path = "../../pinetime-flash", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

static_cell = "2.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.8"
