[package]
edition = "2021"
name = "reloader-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-nrf = { version = "0.2", default-features = false, features = ["rt", "nrf52832"] }

static_cell = "2.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
